# ant-adventures

./: README.md  ant-adventures.cabal  results.txt
src/: Main.hs
