name:                ant-adventures
version:             0.1.0.0
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              astynax
copyright:           2015 astynax
build-type:          Simple
cabal-version:       >=1.10

executable ant-adventures
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers
